<resources>
    <string name="app_name">SauceDeluxe</string>
    <string name="return_btn">Retour</string>
    <string name="Ajouter">Ajouter au panier</string>
    <string name="BASKET">Votre commande :</string>
    <string name="order">Commander</string>
    <string name="dessertsBtn">Desserts</string>
    <string name="platsBtn">Plats</string>
    <string name="entreesBtn">Entrées</string>
    <string name="categorie_title">test</string>
    <string name="toast">Un Toast ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="counterDebut">0</string>
    <string name="BLEScan">Blé</string>

    <string name="ble_scan_play_title">Lancer le scan Blé des champs</string>
    <string name="ble_scan_pause_title">Recherche des fleurs en cours...</string>
    <string name="NumberID">ID</string>
    <string name="statusBle">"Status : connecté "</string>
    <string name="questionTextview">Question</string>
    <string name="answerTextview">Answer</string>
    <string name="titleOfBleInfo">"INFO BLE "</string>
    <string name="longNombre">Très long nombre jsp c\'est quoi encore</string>
    <string name="caracteristique_specifique">Caractéristique Spécifique</string>
    <string name="UUID">UUID</string>
    <string name="LECTURE">"LECTURE "</string>
    <string name="ECRITURE" />
    <string name="ECRITUREb">ECRITURE</string>
    <string name="NOTIFIER">NOTIFIER</string>
    <string name="Propriétés">Propriétés :</string>
    <string name="Valeur">"Valeur : "</string>
    <string name="nomParent">nomParent</string>
</resources>